--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,12 +3,26 @@
 {% block title %}Mysite | Home{% endblock %}
 
 {% block content %}
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <!-- Brand -->
+    <a class="navbar-brand" href="#">SAAMARTH VERMA</a>
+  
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">BLOG</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">ABOUT</a>
+      </ul>
+    </div>
+  </nav>
 
-{% for post in posts %}
-
-<h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
-
-{% endfor %}
+{% block main-content %}{% endblock %}
 
 {% endblock %}
