--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">SAAMARTH VERMA</a>
+    <a class="navbar-brand" href="#">ROHIT VERMA</a>
   
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -16,13 +16,15 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">HOME</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">BLOG</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'blog' %}">BLOG</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">CONTACT</a></li>
         <li class="nav-item"><a class="nav-link" href="#">ABOUT</a>
       </ul>
     </div>
   </nav>
+  
 
 {% block main-content %}{% endblock %}
+
 
 {% endblock %}
