--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,16 +5,16 @@
 {% block content %}
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">ROHIT VERMA</a>
+    <a class="navbar-brand ml-2 ml-lg-5" >ROHIT VERMA</a>
   
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon fas fa-bars"></span>
     </button>
   
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-lg-auto ml-2 mr-lg-5">
         <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">HOME</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'blog' %}">BLOG</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">CONTACT</a></li>
@@ -24,7 +24,9 @@
   </nav>
   
 
-{% block main-content %}{% endblock %}
+{% block main-content %}
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+{% endblock %}
 
 
 {% endblock %}
