--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -4,6 +4,18 @@
 {% block title %}Mysite |Contact{% endblock %}
 
 {% block main-content %}
+
+{% if messages %}
+    {% for message in messages %}
+        <div class="container-fluid alert alert-{{ message.tags }}">
+            <div class="container message">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <span id="id_message">{{ message }}</span>
+            </div>
+        </div>
+    {% endfor %}
+{% endif %}
+
 <div class="container text-center mt-5 mb-5">
    <form method="POST">
        {% csrf_token %}
