--- a/main/static/style.css
+++ b/main/static/style.css
@@ -20,7 +20,7 @@ html {
 
 .navbar-brand, .navbar-brand:hover {
     color: #ffffff;
-    font-family: 'Sacramento', cursive;
+    font-family: 'Syne Mono', monospace;
     font-size: 24px;
 }
 
