--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -12,7 +12,8 @@
         <!-- Google font section -->
         {% block font %}
             <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">  
+            <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet"> 
+            <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet"> 
         {% endblock %}
 
         <!-- CSS section -->
