--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -28,12 +28,12 @@
 {% block main-content %}
 <div class="container">
   <div class="row mt-5 mb-5">
-    <div class="col-3">
+    <div class="col-6">
       <img src="{% static 'main/images/1604505792912285_50.jpg' %}" alt="My pic" class="image-fluid" width="240px">
     </div>
-      <div class="col-10">
+      <div class="col-6">
         <h1>Rohit Verma</h1>
-        <p>As policymakers grapple with how to address hate speech and disinformation on the internet, they’re eying the legal structure underpinning collaborative software development: legal safe harbors. These safe harbors protect online platforms from liability for the user content that they host, and without these safe harbors, countless user-generated content platforms like GitHub wouldn’t be here today.</p>
+        <p>Hi,I am Rohit Verma.I am at present pursuing B.tech from BIET Jhansi.I did my highschool from GreenField Academy,And got 84.8% marks with ICSE board.And i did my Intermediate from Anand Bhawan School,Barabanki.I got 88% marks with ISC Board.At present i am in second year,and still learning many more new technologies to go much deeper in new era technologies.</p>
     </div>
   </div>
 </div>
